# protohackers

./: .gitignore  Dockerfile  Makefile  README.md
infra/: .gitignore  main.tf  setup_host.sh  vars.tf
infra/assets/: dl_new_bin.sh  protohacker0.service  protohacker1.service  setup_host.sh
infra/scripts/: create_tfvars.sh  instance.sh  setup_aws_profile.sh
problem0/: Cargo.toml
problem0/src/: main.rs
problem0_smoketest/: Cargo.toml
problem1/: Cargo.toml
problem1/src/: concurrent_sieve.rs  main.rs
