[package]
name = "problem1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
sysinfo = "0.29.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[dependencies.async-std]
version="1.12.0"
features=["attributes"]